[gd_scene load_steps=2 format=2]

[ext_resource path="res://juego/Menus/GuardarCargarTest.gd" type="Script" id=1]

[node name="GuardarCargarTest" type="Node"]
script = ExtResource( 1 )

[node name="BotonGuardar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = 137.0
margin_right = -22.0
margin_bottom = 177.0
text = "Guardar"

[node name="BotonCargar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = 139.0
margin_right = 106.0
margin_bottom = 179.0
text = "Cargar"

[node name="BotonGuardarGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = 195.0
margin_right = -9.0
margin_bottom = 235.0
text = "Guardar a lo godot"

[node name="BotonCargarGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 12.0
margin_top = 192.0
margin_right = 112.0
margin_bottom = 232.0
text = "Cargar a lo godot"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = -89.0
margin_right = 92.0
margin_bottom = -75.0
text = "Hola Mundo, mi nombre es"

[node name="TextoResultadoJSON" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 108.0
margin_top = -35.0
margin_right = 283.0
margin_bottom = -21.0
text = "Resultado"

[node name="TextoResultadoTRES" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 108.0
margin_top = 50.0
margin_right = 283.0
margin_bottom = 64.0
text = "Resultado"

[node name="NombreJSON" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = -50.0
margin_right = 83.5
margin_bottom = 4.0

[node name="NombreTRES" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = 30.0
margin_right = 83.5
margin_bottom = 84.0

[connection signal="pressed" from="BotonGuardar" to="." method="_on_BotonGuardar_pressed"]
[connection signal="pressed" from="BotonCargar" to="." method="_on_BotonCargar_pressed"]
[connection signal="pressed" from="BotonGuardarGodot" to="." method="_on_BotonGuardarGodot_pressed"]
[connection signal="pressed" from="BotonCargarGodot" to="." method="_on_BotonCargarGodot_pressed"]
